app/index.css
/* roboto-regular - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: url('fonts/roboto-v16-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Roboto'), local('Roboto-Regular'),
       url('fonts/roboto-v16-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('fonts/roboto-v16-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('fonts/roboto-v16-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('fonts/roboto-v16-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('fonts/roboto-v16-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
}

/* josefin-sans-regular - latin */
@font-face {
  font-family: 'Josefin Sans';
  font-style: normal;
  font-weight: 400;
  src: url('fonts/josefin-sans-v10-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Josefin Sans Regular'), local('JosefinSans-Regular'),
       url('fonts/josefin-sans-v10-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('fonts/josefin-sans-v10-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('fonts/josefin-sans-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('fonts/josefin-sans-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('fonts/josefin-sans-v10-latin-regular.svg#JosefinSans') format('svg'); /* Legacy iOS */
}

/* arvo-regular - latin */
@font-face {
  font-family: 'Arvo';
  font-style: normal;
  font-weight: 400;
  src: url('fonts/arvo-v9-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Arvo'),
       url('fonts/arvo-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('fonts/arvo-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('fonts/arvo-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('fonts/arvo-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('fonts/arvo-v9-latin-regular.svg#Arvo') format('svg'); /* Legacy iOS */
}

body {
  /*background: #C6E0FF;*/
  font-family: 'Roboto';
  color: #315659;
}

ul {
  padding: 0;
}

li {
  list-style-type: none;
}

a {
  text-decoration: none;
  color: #315659;
  font-weight: bold;
  letter-spacing: 1px;
}

a:hover {
  color: #f79c13;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
}

.tab-menu {
  display: flex;
  justify-content: center;
}

.tab-menu li {
  margin: 10px;
  font-weight: bold;
  cursor: pointer;
}

.nav-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.nav-container p {
  margin: 0;
  font-family: 'Arvo';
  font-size: 24px;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.nav {
  text-transform: uppercase;
  display: flex;
}

.active {
  color: #f79c13
}

.nav li {
  margin-right: 15px;
}

.home-container {
  display: flex;
}

.home-container img {
  align-self: center;
}

.home-about-me {
  text-align: justify;
  margin-left: 50px;
  line-height: 30px;
}

.project-item {
  display: flex;
  flex-direction: row;
  margin-top: 50px;
  margin-bottom: 50px;
  justify-content: space-between;
}

.project-item .item-description {
  width: 600px;
  text-align: justify;
  line-height: 30px;
}

.project-item .project-image-container {
  width: 400px;
  margin: auto;
}

.project-item img {
  height: 300px;
  width: auto;
}

.contacts-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contacts-container a:hover {
  color: #f79c13;
}

